--- a/diff.html
+++ b/diff.html
@@ -108,7 +108,7 @@
       </svg>      <a href="#d2h-657379" class="d2h-file-name">/home/runner/work/progress/progress/clones/{ha-core/homeassistant/components → beta/custom_components}/plugwise/coordinator.py</a>
       <span class="d2h-file-stats">
           <span class="d2h-lines-added">+19</span>
-          <span class="d2h-lines-deleted">-31</span>
+          <span class="d2h-lines-deleted">-40</span>
       </span>
     </span>
 </li>
@@ -14973,7 +14973,7 @@
                 <tr>
     <td class="d2h-code-linenumber d2h-info"></td>
     <td class="d2h-info">
-        <div class="d2h-code-line">@@ -1,46 +1,34 @@</div>
+        <div class="d2h-code-line">@@ -1,55 +1,34 @@</div>
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-del d2h-change">
@@ -15086,8 +15086,19 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-linenumber d2h-cntx">
+    <td class="d2h-code-linenumber d2h-del">
       <div class="line-num1">9</div>
+<div class="line-num2"></div>
+    </td>
+    <td class="d2h-del">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn">from homeassistant.helpers.debounce import Debouncer</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-linenumber d2h-cntx">
+      <div class="line-num1">10</div>
 <div class="line-num2">4</div>
     </td>
     <td class="d2h-cntx">
@@ -15109,7 +15120,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">10</div>
+      <div class="line-num1">11</div>
 <div class="line-num2">6</div>
     </td>
     <td class="d2h-cntx">
@@ -15120,24 +15131,13 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-del d2h-change">
-      <div class="line-num1">11</div>
+      <div class="line-num1">12</div>
 <div class="line-num2"></div>
     </td>
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
             <span class="d2h-code-line-ctn"><del>from</del> .<del>const import DEFAULT_SCAN_INTERVAL, DOMAIN, LOGGER</del></span>
-        </div>
-    </td>
-</tr><tr>
-    <td class="d2h-code-linenumber d2h-del">
-      <div class="line-num1">12</div>
-<div class="line-num2"></div>
-    </td>
-    <td class="d2h-del">
-        <div class="d2h-code-line">
-            <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn"><br></span>
         </div>
     </td>
 </tr><tr>
@@ -15159,7 +15159,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">class PlugwiseData(NamedTuple):</span>
+            <span class="d2h-code-line-ctn"><br></span>
         </div>
     </td>
 </tr><tr>
@@ -15170,7 +15170,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    &quot;&quot;&quot;Plugwise data stored in the DataUpdateCoordinator.&quot;&quot;&quot;</span>
+            <span class="d2h-code-line-ctn">class PlugwiseData(NamedTuple):</span>
         </div>
     </td>
 </tr><tr>
@@ -15181,7 +15181,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn"><br></span>
+            <span class="d2h-code-line-ctn">    &quot;&quot;&quot;Plugwise data stored in the DataUpdateCoordinator.&quot;&quot;&quot;</span>
         </div>
     </td>
 </tr><tr>
@@ -15192,12 +15192,23 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    gateway: dict[str, Any]</span>
+            <span class="d2h-code-line-ctn"><br></span>
         </div>
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-del">
       <div class="line-num1">18</div>
+<div class="line-num2"></div>
+    </td>
+    <td class="d2h-del">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn">    gateway: dict[str, Any]</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-linenumber d2h-del">
+      <div class="line-num1">19</div>
 <div class="line-num2"></div>
     </td>
     <td class="d2h-del">
@@ -15219,7 +15230,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">19</div>
+      <div class="line-num1">20</div>
 <div class="line-num2">8</div>
     </td>
     <td class="d2h-cntx">
@@ -15230,7 +15241,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">20</div>
+      <div class="line-num1">21</div>
 <div class="line-num2">9</div>
     </td>
     <td class="d2h-cntx">
@@ -15241,7 +15252,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-del d2h-change">
-      <div class="line-num1">21</div>
+      <div class="line-num1">22</div>
 <div class="line-num2"></div>
     </td>
     <td class="d2h-del d2h-change">
@@ -15252,7 +15263,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-del d2h-change">
-      <div class="line-num1">22</div>
+      <div class="line-num1">23</div>
 <div class="line-num2"></div>
     </td>
     <td class="d2h-del d2h-change">
@@ -15285,7 +15296,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">23</div>
+      <div class="line-num1">24</div>
 <div class="line-num2">12</div>
     </td>
     <td class="d2h-cntx">
@@ -15296,7 +15307,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-del d2h-change">
-      <div class="line-num1">24</div>
+      <div class="line-num1">25</div>
 <div class="line-num2"></div>
     </td>
     <td class="d2h-del d2h-change">
@@ -15318,7 +15329,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">25</div>
+      <div class="line-num1">26</div>
 <div class="line-num2">14</div>
     </td>
     <td class="d2h-cntx">
@@ -15329,7 +15340,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">26</div>
+      <div class="line-num1">27</div>
 <div class="line-num2">15</div>
     </td>
     <td class="d2h-cntx">
@@ -15340,7 +15351,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-del d2h-change">
-      <div class="line-num1">27</div>
+      <div class="line-num1">28</div>
 <div class="line-num2"></div>
     </td>
     <td class="d2h-del d2h-change">
@@ -15351,7 +15362,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-del">
-      <div class="line-num1">28</div>
+      <div class="line-num1">29</div>
 <div class="line-num2"></div>
     </td>
     <td class="d2h-del">
@@ -15362,7 +15373,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-del">
-      <div class="line-num1">29</div>
+      <div class="line-num1">30</div>
 <div class="line-num2"></div>
     </td>
     <td class="d2h-del">
@@ -15373,7 +15384,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-del">
-      <div class="line-num1">30</div>
+      <div class="line-num1">31</div>
 <div class="line-num2"></div>
     </td>
     <td class="d2h-del">
@@ -15384,7 +15395,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-del">
-      <div class="line-num1">31</div>
+      <div class="line-num1">32</div>
 <div class="line-num2"></div>
     </td>
     <td class="d2h-del">
@@ -15395,7 +15406,95 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-del">
-      <div class="line-num1">32</div>
+      <div class="line-num1">33</div>
+<div class="line-num2"></div>
+    </td>
+    <td class="d2h-del">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn">            ),</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-linenumber d2h-del">
+      <div class="line-num1">34</div>
+<div class="line-num2"></div>
+    </td>
+    <td class="d2h-del">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn">            # Don&#x27;t refresh immediately, give the device time to process</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-linenumber d2h-del">
+      <div class="line-num1">35</div>
+<div class="line-num2"></div>
+    </td>
+    <td class="d2h-del">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn">            # the change in state before we query it.</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-linenumber d2h-del">
+      <div class="line-num1">36</div>
+<div class="line-num2"></div>
+    </td>
+    <td class="d2h-del">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn">            request_refresh_debouncer=Debouncer(</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-linenumber d2h-del">
+      <div class="line-num1">37</div>
+<div class="line-num2"></div>
+    </td>
+    <td class="d2h-del">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn">                hass,</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-linenumber d2h-del">
+      <div class="line-num1">38</div>
+<div class="line-num2"></div>
+    </td>
+    <td class="d2h-del">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn">                LOGGER,</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-linenumber d2h-del">
+      <div class="line-num1">39</div>
+<div class="line-num2"></div>
+    </td>
+    <td class="d2h-del">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn">                cooldown=1.5,</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-linenumber d2h-del">
+      <div class="line-num1">40</div>
+<div class="line-num2"></div>
+    </td>
+    <td class="d2h-del">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn">                immediate=False,</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-linenumber d2h-del">
+      <div class="line-num1">41</div>
 <div class="line-num2"></div>
     </td>
     <td class="d2h-del">
@@ -15417,7 +15516,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">33</div>
+      <div class="line-num1">42</div>
 <div class="line-num2">17</div>
     </td>
     <td class="d2h-cntx">
@@ -15428,7 +15527,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-del d2h-change">
-      <div class="line-num1">34</div>
+      <div class="line-num1">43</div>
 <div class="line-num2"></div>
     </td>
     <td class="d2h-del d2h-change">
@@ -15450,7 +15549,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">35</div>
+      <div class="line-num1">44</div>
 <div class="line-num2">19</div>
     </td>
     <td class="d2h-cntx">
@@ -15461,7 +15560,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-del d2h-change">
-      <div class="line-num1">36</div>
+      <div class="line-num1">45</div>
 <div class="line-num2"></div>
     </td>
     <td class="d2h-del d2h-change">
@@ -15472,7 +15571,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-del d2h-change">
-      <div class="line-num1">37</div>
+      <div class="line-num1">46</div>
 <div class="line-num2"></div>
     </td>
     <td class="d2h-del d2h-change">
@@ -15505,7 +15604,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">38</div>
+      <div class="line-num1">47</div>
 <div class="line-num2">22</div>
     </td>
     <td class="d2h-cntx">
@@ -15516,7 +15615,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-del d2h-change">
-      <div class="line-num1">39</div>
+      <div class="line-num1">48</div>
 <div class="line-num2"></div>
     </td>
     <td class="d2h-del d2h-change">
@@ -15560,7 +15659,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">40</div>
+      <div class="line-num1">49</div>
 <div class="line-num2">26</div>
     </td>
     <td class="d2h-cntx">
@@ -15571,7 +15670,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">41</div>
+      <div class="line-num1">50</div>
 <div class="line-num2">27</div>
     </td>
     <td class="d2h-cntx">
@@ -15582,7 +15681,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-del d2h-change">
-      <div class="line-num1">42</div>
+      <div class="line-num1">51</div>
 <div class="line-num2"></div>
     </td>
     <td class="d2h-del d2h-change">
@@ -15604,7 +15703,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">43</div>
+      <div class="line-num1">52</div>
 <div class="line-num2">29</div>
     </td>
     <td class="d2h-cntx">
@@ -15615,7 +15714,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">44</div>
+      <div class="line-num1">53</div>
 <div class="line-num2">30</div>
     </td>
     <td class="d2h-cntx">
@@ -15626,7 +15725,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-del d2h-change">
-      <div class="line-num1">45</div>
+      <div class="line-num1">54</div>
 <div class="line-num2"></div>
     </td>
     <td class="d2h-del d2h-change">
@@ -15637,7 +15736,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-del d2h-change">
-      <div class="line-num1">46</div>
+      <div class="line-num1">55</div>
 <div class="line-num2"></div>
     </td>
     <td class="d2h-del d2h-change">
